# sonic_serde_object

./: .gitignore  Cargo.toml
sonic_serde_macros/: Cargo.toml
sonic_serde_macros/src/: lib.rs
src/: lib.rs
