[package]
name = "sonic_serde_object"
version = "0.2.2"
edition = "2018"
description = "An enum that can contain different types of variables along with a lot of From implementations"
license-file = "LICENSE"
repository = "https://github.com/sonicrules1234/sonic_serde_object"
readme = "README.md"
homepage = "https://github.com/sonicrules1234/sonic_serde_object"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#proc-macro = true

[dependencies]
#inline-proc = {version = "0.1.0", features = [ "ron" ] }
#proc-macro2 = "1.0.32"
serde = { version = "1.0.126", features = ["derive"] }
sonic_serde_macros = "0.1.1"
#sonic_serde_macros = { path = "sonic_serde_macros" }
thiserror = "1.0.29"

[features]
